# thesis

./: README.md
backups/10_06/nexxis_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
backups/10_06/nexxis_ws/src/reachAlpha/: CMakeLists.txt
backups/10_06/nexxis_ws/src/reachAlpha/config/: joint_control.yaml  joint_names.yaml
backups/10_06/nexxis_ws/src/reachAlpha/launch/: joint_control.launch  simulate_reach.launch  testreach.launch
backups/10_06/nexxis_ws/src/reachAlpha/meshes/: first_link.STL  third_link.STL
backups/10_06/nexxis_ws/src/reachAlpha/urdf/: reach.urdf  reachAlpha.csv  reachAlpha.urdf  reachAlpha.xarco
backups/10_06/nexxis_ws/src/reachAlpha/worlds/: reach_world.world
nexxis_ws/.catkin_tools/profiles/default/: devel_collisions.txt
nexxis_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
nexxis_ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
nexxis_ws/devel/.private/reachAlpha/: .catkin  .rosinstall  local_setup.sh
nexxis_ws/devel/.private/reachalpha_moveit_config/: .catkin  .rosinstall
nexxis_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  reachAlpha.pc  reachalpha_moveit_config.pc
nexxis_ws/src/reachAlpha/config/: joint_names_reachAlpha.yaml  topview.rviz
nexxis_ws/src/reachAlpha/launch/: config.rviz  display.launch  gazebo.launch  joint_control.launch  reachworld.launch
nexxis_ws/src/reachalpha_moveit_config/: .setup_assistant
(+100 files in other folders)
